--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,22 +1,69 @@
-@media (min-width:480px);{
+@media (min-width:480px){
+    body {
+    display: inline-block;
+          width: 90% !important;
+            color:dimgray;
+}
+    h1 {
+       font-size: .980em;
+        margin-bottom: 26px;
+    }
+    h2 {
+        font-size: .980em;
+        margin-bottom: 26px;
+    }
+    .container {
+        margin: auto;
+        width: 90%;
+        
+    }
     
     }
     
-@media (min-width:768px);{
-    
-    
+@media (min-width:768px){
+    body {
+    display: inline-block;
+         width: 90% !important;
+        color: dimgray;
 }
-@media (min-width:992px); {
-    
-    
+    h1 {
+       font-size: .960em;
+        margin-bottom: 25px;
+    }
+    h2 {
+        font-size: .960em;
+        margin-bottom: 25px;
+    }
+    .container {
+        margin: auto;
+        width: 90%;
 }
-@media  (min-width:1200px); {
-    
-    
 }
-
-body {
-    display: block
+@media (min-width:992px) {
+    body {
+    display: inline-block;
+          width: 90% !important;
+         color: dimgray;
+}
+    h1 {
+       font-size: .900em;
+        margin-bottom: 24px;
+    }
+    h2 {
+        font-size: .900em;
+        margin-bottom: 24px;
+    }
+    
+    .container {
+        margin: auto;
+        width: 90%;
+    }
+    }
+@media  (min-width:1200px) {
+    body {
+    display: inline-block;
+        width: 90% !important;
+         color: dimgray;
 }
     h1 {
        font-size: .900em;
@@ -26,5 +73,11 @@ body {
         font-size: .900em;
         margin-bottom: 22px;
     }
+    .container {
+        margin: auto;
+        width: 90%;
+    }
     
-  
+}
+
+
