--- a/css/styles.css
+++ b/css/styles.css
@@ -29,12 +29,17 @@ h2 {
     margin-bottom: 1px;
 }
 
- 
+p {
+  font-size: 14px;
+}
+.card-position, .card-title{
+  font-weight: bolder;
+}
 .icons {
     border: 20px;
     padding: 6px;
     border: 10px; 
-    max-width: 20%;
+    width: 90px;
     margin: 5px;
     
 }
@@ -45,5 +50,11 @@ h2 {
     align-content: center;
     
 }
-
-
+.modal-dialog{
+  max-width: 600px;
+  min-width: 300px;
+}
+.card-img-top{
+  width: 100%;
+  height: 400px;
+}
